--- a/index.html
+++ b/index.html
@@ -6,21 +6,45 @@
 		<title>About Sam</title>
 
 		<link rel="stylesheet" href="css/style.css">
+		<link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&appId=591718594201172&version=v2.0";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
 
 		<div class="container">
-			<!-- START HERE --> 
 
+			<h1>About Sam</h1>
+			<h2>You had me at hello world</h2>
 
+			<p>I'm currently a marketing intern at Warby Parker. At NYU I studied Music Business and English Literature.</p>
 
+			<p>My three favorite smells in the world: coffee, chocolate, the cool side of a pillow. What would I play at a YouTube party? <a href="https://www.youtube.com/watch?v=gAYL5H46QnQ&amp;noredirect=1" target="_blank">Threw it on the Ground!</a></p>
 
+			<p>I couldn't afford one of those cool Daft Punk helmets. So I made my own.</p>
 
+			<p>
+				<a href="https://github.com/onemonthrails" target="_blank">
+   			<img src="images/github.png" alt="Github"></a>
 
+				<a href="https://twitter.com/onemonthrails" target="_blank">
+   			<img src="images/twitter.png" alt="Twitter"></a>
 
-			<!-- END HERE --> 
-		</div><!-- .container --> 
+   			<a href="https://www.facebook.com/OneMonthRails" target="_blank">
+   			<img src="images/facebook.png" alt="Facebook"></a>
+   		</p>
+
+			<div class="fb-like" data-href="http://one-month.s3-website-us-east-1.amazonaws.com/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+
+		</div><!-- .container -->
 
 	</body>
 </html>
