--- a/bootstrap-landingpage/index.html
+++ b/bootstrap-landingpage/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Chris Castiglione, and the One Month team">
+    <meta name="author" content="">
     <title>What I Learned: One Month HTML</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,7 +22,7 @@
   </head>
   <body>
 
-  <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <nav class="navbar navbar-default" role="navigation">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -30,30 +31,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Project name</a>
+         <a class="navbar-brand" href="/"><i class="fa fa-code"></i> What I Learned: One Month HTML</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li class="dropdown-header">Nav header</li>
-              <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
-        </ul>
+
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="../navbar/">Default</a></li>
-          <li class="active"><a href="./">Static top</a></li>
-          <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+          <li><a href="mailto:martin@martincrockett.com"><i class="fa fa-envelope-o"></i> Email Me</a></li>
+          <li><a href="http://www.twitter.com/martinc"><i class="fa fa-twitter"></i> Twitter</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -74,13 +58,13 @@
     <div class="item active">
       <img src="images/beach.jpg" alt="Beach">
       <div class="carousel-caption">
-        HTML is my Beach House
+        <h3>HTML is my Beach House</h3>
       </div>
     </div>
     <div class="item">
       <img src="images/birds.jpg" alt="Birds">
       <div class="carousel-caption">
-        CSS is where I meet my Friends
+        <h3>CSS is where I meet my Friends</h3>
       </div>
     </div>
     <div class="item">
@@ -110,8 +94,8 @@
 
 <div class="row featurette">
   <div class="col-md-7">
-    <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    <h2 class="featurette-heading">HTML is <span class="text-muted">100% free</span></h2>
+    <p class="lead">No gimmicks. No bull. HTML is brought to you for free by the W3C. It can be used from the comfort of your own home. And it works in the browser along with CSS and JavaScript. Use all three to make a kickass Website.</p>
   </div>
   <div class="col-md-5">
     <img class="featurette-image img-responsive" src="images/dog.jpg" alt="Generic placeholder image">
@@ -125,24 +109,40 @@
     <img class="featurette-image img-responsive" src="images/chrome.jpg" alt="Generic placeholder image">
   </div>
   <div class="col-md-7">
-    <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    <h2 class="featurette-heading">What's Included with HTML?</h2>
+    <p class="lead">Tags to make words bold. Like a boss. And tons of CSS properties to style your page:</p>
+    <code>.ninja { color: black; visibility: none; }</code>
   </div>
 </div>
 
-<hr class="featurette-divider">
+  <hr class="featurette-divider">
 
-<!-- FOOTER -->
-<footer>
-  <p class="pull-right"><a href="#">Back to top</a></p>
-  <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-</footer>
+  <div class="companies">
+    <div class="text-center">
+      <h3 class="text-muted">HTML is Trusted By 100,000+ Companies Including</h3>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+          <img src="images/company1.svg" alt="Bloomberg">
+      </div>
+      <div class="col-md-3">
+          <img src="images/company2.svg" alt="Google">
+     </div>
+     <div class="col-md-3">
+         <img src="images/company3.svg" alt="Y Combinator">
+     </div>
+       <div class="col-md-3">
+          <img src="images/company4.svg" alt="Singularity University">
+      </div>
+    </div>
+  </div><!-- .trusted-companies -->
 
-<div class="mastfoot">
-  <div class="inner">
-    <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-  </div>
-</div>
+  <hr class="featurette-divider">
+
+  <footer>
+    <p class="pull-right"><a href="#">Back to top</a></p>
+    <p>Made with <a href="#">One Month HTML</a></p>
+  </footer><!-- /.footer -->
 
 </div><!-- /.container -->
 
